Add OrientDB 2.1.2 to the ones tested on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
     - ORIENTDB_VERSION="2.0.12"
     - ORIENTDB_VERSION="2.0.13"
     - ORIENTDB_VERSION="2.1.0"
+    - ORIENTDB_VERSION="2.1.2"
 
 elixir:
   - 1.0.5
