Only test OrientDB 2.2.0-beta on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,12 @@ env:
     - ORIENTDB_USER=root
     - ORIENTDB_PASS=root
   matrix:
-    - ORIENTDB_VERSION="2.1.12"
-
+    - ORIENTDB_VERSION="2.2.0-beta"
 
 elixir:
-  - 1.0.5
-  - 1.2.2
+  - 1.2.3
 
 otp_release:
-  - 17.5
   - 18.2.1
 
 before_install:
