--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
     - ORIENTDB_PASS=root
     - ORIENTDB_CACERTFILE="$(pwd)/ci/orientdb.pem"
   matrix:
-    - ORIENTDB_VERSION="2.2.0-rc1"
+    - ORIENTDB_VERSION="2.2.0"
 
 elixir:
   - 1.2.4
