--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ env:
     - ORIENTDB_CACERTFILE="$(pwd)/ci/orientdb.pem"
   matrix:
     - ORIENTDB_VERSION="3.0.0-SNAPSHOT"
-    - ORIENTDB_VERSION="2.2.4-SNAPSHOT"
+    - ORIENTDB_VERSION="2.2.6-SNAPSHOT"
+    - ORIENTDB_VERSION="2.2.5"
+    - ORIENTDB_VERSION="2.2.4"
     - ORIENTDB_VERSION="2.2.3"
     - ORIENTDB_VERSION="2.2.2"
 
